--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,27 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
 
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
+env/
+bin/
 build/
 develop-eggs/
 dist/
-downloads/
 eggs/
-.eggs/
 lib/
 lib64/
 parts/
 sdist/
 var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+doc/_build
 
 # Installer logs
 pip-log.txt
@@ -40,90 +30,66 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
-.nox/
+cover/
 .coverage
-.coverage.*
 .cache
 nosetests.xml
 coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
+cover/
 
 # Translations
 *.mo
-*.pot
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
 
 # Django stuff:
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
+*.pot
 
 # Sphinx documentation
 docs/_build/
 
-# PyBuilder
-target/
+#mac
+.DS_Store
+*~
 
-# Jupyter Notebook
-.ipynb_checkpoints
+#pycharm
+.idea/*
 
-# IPython
-profile_default/
-ipython_config.py
+#Dolphin browser files
+.directory/
+.directory
 
-# pyenv
-.python-version
+#Binary data files
+*.volume
+*.am
+*.tiff
+*.tif
+*.dat
+*.DAT
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+#generated documntation files
+generated/
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
+#ipython notebook
+.ipynb_checkpoints/
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+#vim
+*.swp
 
-# SageMath parsed files
-*.sage.py
+#data files
+*.zip
+*.jpg
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# ctags
+.tags*
 
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+# Emacs temp and backup files
+*~
+\#*\#
